# ai-aim-coach

./: .gitignore  CLAUDE.md
.claude/rules/architecture/: ai-automation.md  ai-inference.md  capture.md  data-model.md  decision-log.md  overview.md  security.md
.claude/rules/coding/: python.md  rust.md  typescript.md
.claude/rules/process/: communication.md  governance.md  roadmap.md  working-instructions.md
.github/workflows/: ci.yml
client/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: audit.rs  lib.rs  main.rs  sidecar.rs
client/src-tauri/src/capture/: detector.rs  dxgi.rs  mod.rs  wgc.rs
client/src-tauri/src/ffmpeg/: mod.rs  pipe.rs
client/src-tauri/src/input/: mod.rs  raw_input.rs
client/src/test/: smoke.test.ts
sidecar/: mypy.ini  requirements-dev.txt  requirements.txt  ruff.toml  sidecar.spec
sidecar/app/: main.py
sidecar/app/api/: health.py  inference.py
sidecar/app/inference/: detector.py  preprocessor.py
sidecar/tests/: test_health.py  test_inference.py
