[package]
name = "ai-aim-coach"
version = "0.1.0"
description = "AI Aim Coach — PUBG 사격 감도 자동 교정 도구"
authors = ["kmhyuk5730"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_aim_coach_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    # DXGI Desktop Duplication (AC-1)
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    # Windows Graphics Capture (AC-2)
    "Foundation",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
